# Langchain-Practice

./: .gitignore  Makefile  Readme.md  pyproject.toml  requirements.txt
agents/: agent_chat.py  agents_basic.py
chains/: chain_runnables.py  chains_basics.py
chat/: chat_model_basic.py  chat_model_basic_conversations.py  chat_model_save_message_history.py
prompt_templates/: basic_prompt_template.py
rag/: agents_docstore.py  rag_basics.py  rag_basics2.py  rag_chat.py  rag_conversation.py  rag_firecrawl.py  rag_metadata.py  rag_metadata2.py  rag_web_basics.py
